# butterfly

./: .gitmodules  Cargo.toml  README.md  TODO.md  rustfmt.toml
examples/minimal_ftp_fuzzer/: Cargo.toml  README.md  fuzz.conf  stategraph.dot
examples/minimal_ftp_fuzzer/pcaps/: ls.pcapng
examples/minimal_ftp_fuzzer/src/: main.rs
src/: event.rs  feedback.rs  input.rs  lib.rs  monitor.rs  observer.rs  scheduler.rs
src/mutators/: crossover.rs  delete.rs  duplicate.rs  havoc.rs  mod.rs  reorder.rs  splice.rs
