[package]
name = "butterfly-fuzz"
version = "0.1.0"
edition = "2021"
authors = ["Patrick D."]
description = "LibAFL components for stateful fuzzing"
readme = "README.md"
repository = "https://github.com/fkie-cad/butterfly"
license = "MIT"
keywords = ["libafl", "fuzzing", "security", "stateful"]
include = [
    "src/*",
    "Cargo.toml",
    "README.md",
]

[dependencies]
libafl = "0.8"
pcap = "0.9"
serde = "1.0"

[package.metadata.docs.rs]
all-features = true
